# Agricultural-land-classification

./: .gitignore  README.md  fetch_dataset.py  hybrid_cnn_and_vit_keras.ipynb  hybrid_cnn_and_vit_pytorch.ipynb  model_building_keras.ipynb  model_building_pytorch.ipynb  pyproject.toml
